policies/docker-cis-5.9-and-5.20-ensure-that-the-host-s-network-namespace-is-not-shared.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-5.9-and-5.20-ensure-that-the-host-s-network-namespace-is-not-shared
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: 'When HostNetwork is enabled the container is not placed inside a separate
    network stack. The container''s networking is not containerized when this option
    is applied. The consequence of this is that the container has full access to the
    host''s network interfaces. It also enables a shared UTS namespace. The UTS namespace
    provides isolation between two system identifiers: the hostname and the NIS domain
    name. It is used to set the hostname and the domain which are visible to running
    processes in that namespace. Processes running within containers do not typically
    require to know either the hostname or the domain name. The UTS namespace should
    therefore not be shared with the host.'
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment gcp-cloud-controller-manager in openshift-cloud-controller-manager
      namespace
    deployment:
      name: gcp-cloud-controller-manager
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment gcp-pd-csi-driver-controller in namespace openshift-cluster-csi-drivers
    deployment:
      name: gcp-pd-csi-driver-controller
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment gcp-pd-csi-driver-node in namespace openshift-cluster-csi-drivers
    deployment:
      name: gcp-pd-csi-driver-node
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment machine-approver in namespace openshift-cluster-machine-approver
    deployment:
      name: machine-approver
      scope:
        cluster: ''
        namespace: openshift-cluster-machine-approver
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-master in namespace openshift-ovn-kubernetes
    deployment:
      name: ovnkube-master
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-node in namespace openshift-ovn-kubernetes
    deployment:
      name: ovnkube-node
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-cloud-controller-manager-operator in namespace
      openshift-cloud-controller-manager-operator
    deployment:
      name: cluster-cloud-controller-manager-operator
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment node-resolver in namespace openshift-dns
    deployment:
      name: node-resolver
      scope:
        cluster: ''
        namespace: openshift-dns
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment aws-ebs-csi-driver-controller in namespace openshift-cluster-csi-drivers
    deployment:
      name: aws-ebs-csi-driver-controller
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment aws-ebs-csi-driver-node in namespace openshift-cluster-csi-drivers
    deployment:
      name: aws-ebs-csi-driver-node
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment azure-disk-csi-driver-controller in namespace
      openshift-cluster-csi-drivers
    deployment:
      name: azure-disk-csi-driver-controller
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment azure-disk-csi-driver-node in namespace openshift-cluster-csi-drivers
    deployment:
      name: azure-disk-csi-driver-node
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-scheduler namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-scheduler
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-controller-manager namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-controller-manager
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-network-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-network-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-multus namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-multus
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-version namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-version
        label: null
    image: null
    expiration: null
  - name: Don't alert on node-ca DaemonSet in the openshift-image-registry namespace
    deployment:
      name: node-ca
      scope:
        cluster: ''
        namespace: openshift-image-registry
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-etcd namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-etcd
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-machine-config-operator
      namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-config-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-monitoring namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-monitoring
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-machine-api namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-api
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-cluster-node-tuning-operator
      namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-node-tuning-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment coredns-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: coredns-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment haproxy-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: haproxy-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment keepalived-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: keepalived-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployments coredns-ci-ln-*-worker-* in namespace openshift-vsphere-infra
    deployment:
      name: coredns-ci-ln-.*-worker-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployments keepalived-ci-ln-*-worker-* in namespace openshift-vsphere-infra
    deployment:
      name: keepalived-ci-ln-.*-worker-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment router-default in namespace openshift-ingress
    deployment:
      name: router-default
      scope:
        cluster: ''
        namespace: openshift-ingress
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment vmware-vsphere-csi-driver-controller in namespace
      openshift-cluster-csi-drivers
    deployment:
      name: vmware-vsphere-csi-driver-controller
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment vmware-vsphere-csi-driver-node in namespace openshift-cluster-csi-drivers
    deployment:
      name: vmware-vsphere-csi-driver-node
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment network-node-identity in namespace openshift-network-node-identity
    deployment:
      name: network-node-identity
      scope:
        cluster: ''
        namespace: openshift-network-node-identity
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-control-plane in namespace openshift-ovn-kubernetes
    deployment:
      name: ovnkube-control-plane
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment aws-cloud-controller-manager in namespace openshift-cloud-controller-manager
    deployment:
      name: aws-cloud-controller-manager
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 5.9 and 5.20: Ensure that the host''s network namespace
    is not shared'
  policySections:
  - sectionName: Section 1
    policyGroups:
    - fieldName: Host Network
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  rationale: Selecting this option is potentially dangerous. It allows the container
    process to open reserved low numbered ports in the way that any other root process
    can. It also allows the container to access network services such as D-bus on
    a Docker host. A container process could potentially carry out undesired actions,
    such as shutting down the host. The container will also share the network namespace
    with the host, providing full permission for each container to change the hostname
    of the host. This is not in line with good security practice and should not be
    permitted.
  remediation: 'You should not create a deployment with `hostNetwork: true`'
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
